# indibench

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LMBench_References.md  README.md  goals.md  pyproject.toml
.github/ISSUE_TEMPLATE/: question_error_report.yml
data/: CANARY_GUID  README.md
data/candidates/authoring/: bn.jsonl  codemix.jsonl  en-IN.jsonl  gu.jsonl  hi.jsonl  kn.jsonl  ml.jsonl  mr.jsonl  or.jsonl  pa.jsonl  ta.jsonl  te.jsonl
data/candidates/v0-seed/: indibench_text_candidates_bn.json  indibench_text_candidates_en-IN.json  indibench_text_candidates_gu.json  indibench_text_candidates_hi-Latn.json  indibench_text_candidates_hi.json  indibench_text_candidates_kn.json  indibench_text_candidates_ml.json  indibench_text_candidates_mr.json  indibench_text_candidates_or.json  indibench_text_candidates_pa.json  indibench_text_candidates_ta-Latn.json  indibench_text_candidates_ta.json  (+1 more)
data/sources/: README.md
docs/: DECISIONS.md  FOLDER_MAP.md  PROJECT_MAP.md  RUNBOOK.md  THESIS.md  USER_INPUTS.md
docs/design/: phase1-indibench-text.md
docs/pitch/: deck.html
docs/research/: 2026-07-12-harness-and-arena.md  2026-07-12-indic-landscape.md  2026-07-13-benchmark-audit.md  2026-07-13-implementation-audit.md
docs/wiki/: index.html
evals/inspect/: indibench_text.py
evals/standalone/: judge.py  predict.py
scripts/: assemble_candidates.py  run_benchmark.py  run_filter.py
src/indibench/: __init__.py  canary.py  judging.py  providers.py  schema.py
tests/: test_benchmark_runner.py  test_pipeline_logic.py  test_readiness.py
(+9 files in other folders)
